# MusicRemixer

./: .gitignore  README.md  deploy.sh  pyproject.toml
.docs/: WINDOWS_PORTABLE_PLAN.md
.woodpecker/: ci.yml  windows-release.yml
app/: main.py
app/api/: events.py  health.py  jobs.py  router.py  stems.py
app/core/: config.py  models.py  persistence.py  registry.py  stats.py
app/data/: job_stats.json
app/pipeline/: _bsr_worker.py  analyze.py  collect.py  download.py  runner.py  separate.py
desktop/: index.html  package.json  setup.css  setup.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
packaging/windows/: README-WINDOWS.txt  THIRD_PARTY_NOTICES.txt
scripts/windows/: make-portable.ps1
static/: index.html
static/css/: appbar.css  base.css  history.css  mixer.css  transport.css  waves.css
static/js/: constants.js  history.js  job.js  main.js  mixer.js  player.js  state.js  transport.js
tests/: test_config.py  test_detect_key.py  test_download.py  test_health_api.py  test_jobs_api.py  test_mixer_pitch_livemix.py  test_pipeline_runner.py  test_pitch_desync.py  test_readers_atomicity.py  test_stats.py  test_stems_api.py  test_stems_parsing.py  test_sweep.py  test_url_validation.py
