[project]
name = "stemdeck"
version = "0.1.0"
description = "Paste a YouTube URL, get audio stems split into a DAW-style player."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yt-dlp>=2024.12.0",
    "demucs>=4.0.1",
    # Pin torch/torchaudio to 2.6.x — torchaudio 2.7+ removed its built-in
    # audio writer and now requires the separate `torchcodec` package, which
    # has ABI issues with torch 2.11. Demucs 4.0.1 calls torchaudio.save() to
    # write stems, so it breaks on 2.7+.
    "torch>=2.6,<2.7",
    "torchaudio>=2.6,<2.7",
    # torchaudio 2.6 dispatches WAV writes through libsndfile via soundfile.
    # Without this, demucs crashes on save with "Couldn't find appropriate
    # backend to handle uri ... drums.wav".
    "soundfile>=0.12",
    # BPM + key analysis on the downloaded source. Pulls numpy/scipy/numba.
    "librosa>=0.10",
    # ITU-R BS.1770 integrated-loudness (LUFS) measurement for the
    # post-analysis loudness card. Pure Python, depends on scipy which
    # librosa already pulls in.
    "pyloudnorm>=0.1.1",
    "python-multipart>=0.0.27",
    "audio-separator>=0.44.1",
    "onnxruntime<1.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["jobs", ".run", "static/vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long -- format-check is the gate, not lint
    "B008",   # FastAPI uses Depends(...) in defaults
    "SIM105", # try/except/pass is fine; contextlib.suppress is heavier for one-shot warm-up imports
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
